feat: Introduce pagination ala read api.
